# IteratedDijkstraPropagationAlgorithm

./: .gitignore  CMakeLists.txt  README.md
include/: example_setup.hpp  grid_state.hpp  heap.hpp  iterated_dijkstra_propagation.hpp  logger.hpp  multicost.hpp  multicost_array.hpp  multicost_compute.hpp  multicost_graph.hpp  multicost_pathfind.hpp  single_optimal_path_finder.hpp
source/examples/: example_setup.cpp
source/search/: iterated_dijkstra_propagation.cpp
source/state/: grid_state.cpp
